# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  leaderboard.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  config.py  database_connection.py  event_queue.py  get_image.py  index.py  initialize_database.py
src/repositories/: leaderboard_repository.py
src/services/: clock.py  game.py  game_loop.py  renderer.py
src/sprites/: background.py  enemy.py  laser.py  spaceship.py
src/tests/: game_loop_test.py  game_test.py
src/tests/repositories/: leaderboard_repository_test.py
src/tests/services/: game_loop_test.py  game_test.py
src/ui/: game_over_view.py  game_view.py  main_menu_view.py
